# tp-retake

./: CMakeLists.txt  main.cpp  readme.md
include/: Date.h  Letter.h  LetterList.h
src/: Date.cpp  Letter.cpp  LetterList.cpp
tests/data/case_1/: in.txt
tests/data/case_2/: in.txt
tests/data/case_3/: in.txt
tests/include/: tests.h
tests/src/: tests.cpp
